--- a/src/scss/components/abilitiesStats.scss
+++ b/src/scss/components/abilitiesStats.scss
@@ -4,16 +4,18 @@
   right: 10rem;
   color: $color-white;
   width: 22.5rem;
-  // height: 8rem;
   font-size: 1rem;
   z-index: 2;
   animation: fade-in 1s;
 
   @include respond(phone) {
-    top: 9.2rem;
-    right: 1.7rem;
-    width: 15rem;
-    font-size: 4.4px;
+    top: 9.45rem;
+    right: 6.7rem;
+    width: 10rem;
+    height: 4.2rem;
+    font-size: 4.8px !important;
+    overflow: scroll;
+    border-radius: 3px;
   }
 
   &__stats {
